changed styling of post previews to stop overflow

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -30,6 +30,10 @@ body{
     border: 0px solid;
 }
 
+.post-preview img{
+    width:100%;
+    height:auto;
+}
 
 
 
